--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta property="og:title" content="참말 - 프로필 링크">
     <meta property="og:description" content="방가방가">
     <meta property="og:image" content="cat.jpg">
-    <title>르탄이 - 프로필 링크</title>
+    <title>참말 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
